# cop

./: .gitignore  AGENT.md  CMakeLists.txt  README  README.md  cop.c  cop_ui.c  history_db.c  history_db.h  libmill.md  llm_parser.c  llm_parser.h  llm_runtime.c  llm_runtime.h  llm_runtime_test.c  models_config.c  models_config.h  openai_sse_parser.c  openai_sse_parser.h  openai_stream_client.c  openai_stream_client.h  openai_stream_client_async_test.c  sanitize_utf8.c  sanitize_utf8.h  test_sanitize_utf8.c  tool_call_parser.c  tool_call_parser.h  tool_functions.c  tool_functions.h
isocline/include/: isocline.h
isocline/src/: editline.c  env.h  isocline.c
